examples/test/testpolicy6650.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6650
  namespace: namespace166
spec:
  podSelector:
    matchLabels:
      key15: value27
      key13: value29
      key0: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value43
          key24: value46
      podSelector:
        matchLabels:
          key19: value44
          key45: value22
          key41: value4
